@@ -1,47 +1,0 @@
-<?xml version = '1.0' encoding = 'UTF-8'?>
-<!DOCTYPE KDevPrjSession>
-<KDevPrjSession>
- <DocsAndViews NumberOfDocuments="4" >
-  <Doc0 NumberOfViews="1" URL="file:///home/rui/development/C/json/src/json.h" >
-   <View0 Encoding="" Type="Source" />
-  </Doc0>
-  <Doc1 NumberOfViews="1" URL="file:///home/rui/development/C/json/src/json.c" >
-   <View0 Encoding="" line="305" Type="Source" />
-  </Doc1>
-  <Doc2 NumberOfViews="1" URL="file:///home/rui/development/C/json/src/rstring/rstring.h" >
-   <View0 Encoding="" line="73" Type="Source" />
-  </Doc2>
-  <Doc3 NumberOfViews="1" URL="file:///home/rui/development/C/json/src/rstring/rstring.c" >
-   <View0 Encoding="" line="33" Type="Source" />
-  </Doc3>
- </DocsAndViews>
- <pluginList>
-  <kdevdebugger>
-   <breakpointList/>
-   <showInternalCommands value="0" />
-  </kdevdebugger>
-  <kdevastyle>
-   <Extensions ext="*.cpp *.h,*.c *.h,*.cxx *.hxx,*.c++ *.h++,*.cc *.hh,*.C *.H,*.diff,*.inl,*.java,*.moc,*.patch,*.tlh,*.xpm" />
-   <AStyle IndentPreprocessors="0" FillCount="4" PadParenthesesOut="1" IndentNamespaces="1" IndentLabels="1" Fill="Tabs" MaxStatement="40" Brackets="Break" MinConditional="-1" IndentBrackets="0" PadParenthesesUn="1" BlockBreak="0" KeepStatements="1" KeepBlocks="1" BlockIfElse="0" IndentSwitches="1" PadOperators="0" FStyle="UserDefined" IndentCases="0" FillEmptyLines="0" BracketsCloseHeaders="0" BlockBreakAll="0" PadParenthesesIn="1" IndentClasses="1" IndentBlocks="0" FillForce="0" />
-  </kdevastyle>
-  <kdevbookmarks>
-   <bookmarks>
-    <bookmark url="/home/rui/development/C/json/src/json.c" >
-     <mark line="1398" />
-    </bookmark>
-    <bookmark url="/home/rui/development/C/json/src/rstring/rstring.c" >
-     <mark line="184" />
-    </bookmark>
-   </bookmarks>
-  </kdevbookmarks>
-  <kdevsubversion>
-   <subversion base="" />
-  </kdevsubversion>
-  <kdevvalgrind>
-   <executable path="" params="" />
-   <valgrind path="/usr/bin/valgrind" params=" --tool=memcheck --leak-check=yes" />
-   <calltree path="" params="" />
-   <kcachegrind path="" />
-  </kdevvalgrind>
- </pluginList>
-</KDevPrjSession>
